2008-02-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term_api.h src/datafile.c src/gadgets.c src/term.c src/gplt_x11.c
	term/cairo.trm term/cgm.trm term/dumb.trm term/eepic.trm term/gd.trm
	term/pdf.trm term/post.trm term/x11.trm src/wxterminal/wxt_term.h
	src/wxterminal/wxt_gui.cpp:  A user has reported problems on ia64 that
	may arise from improper casting between signed and unsigned numbers.
	To facilitate debugging, change "unsigned" to explicit "unsigned int".

	* src/hidden3d.c (sort_edges_by_z sort_polys_by_z):
	Remove incorrect cast to (unsigned long).

	* src/axis.h src/graphics.c src/plot2d.c(store2d_point eval_plots):
	Remove a few more signed/unsigned incompatibilities. Declare variables
	as coord_type rather than int when appropriate.

	* src/datafile.c src/fit.c:  Use defined enum valur NO_AXIS rather
	than the magic number -1 to mark an axis not in use.  Cleaner, and
	avoids signed/unsigned comparisons.

	* docs/href.c(parse) docs/doc2ipf.c(process_line): Null-terminate
	allocated string. Do not walk off the end of a null-terminated string.
	Bug #1900987

2008-02-23  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/faq-ja.tex:  Translation of revision 1.37

2008-02-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c: #include "readline.h"

	* demo/circles.dem demo/html/Makefile demo/html/index.save:
	Include circles.dem in the set of web demos.

2008-02-23  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/os2/gclient.c: Use the font palette dialog instead of the standard
	font selection dialog. Still switcheable via #define STANDARD_FONT_DIALOG.
	SF #1773922 OS/2 PM-Termial broken font selection by Franz Bakan.

	* config/makefile.cyg: Added GNUPLOT_PS_DIR and WIN_IPC.

	* config/makefile.dj2 config/makefile.os2: Added GNUPLOT_PS_DIR.

	* config/makefile.mgw: Added WIN_IPC.

	* config/makefile.nt: Added GIF_ANIMATION.

	* config/configh_strip4compare.sh: New helper script to facilitate